# pymdp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROPOSAL.md  README.md  RELEASE_CHECKLIST.md  agent_demo.py  chained_cue_navigation.ipynb  chained_cue_navigation.py  debugging.py  environment.yml  example.ipynb  mkdocs.yml  nbval_sanitize.cfg  plot_test.py  pyproject.toml  release-please-config.json  requirements.txt  scrap.py  scratch.py  setup.cfg  setup.py  test.py  test_2.py  test_mmp.py  test_scratch.py  tests.py  tutorial.py
.github/workflows/: docs.yml  lint.yaml  manual-branch-nightly.yaml  nightly-tests.yaml  pr-title-lint.yaml  publish-pypi.yml  python-package.yml  release-please.yml  test.yaml
docs/: agent.rst  conf.py  control.rst  env.rst  index.rst  inference.rst  installation.rst  learning.rst  quickstart.rst  requirements.txt
docs-mkdocs/: agent.html  control.html  env.html  index.md  inference.html  installation.html  learning.html
docs-mkdocs/algos/: index.html
docs-mkdocs/api/: agent.md  algos.md  control.md  envs-env.md  envs-rollout.md  index.md  inference.md  learning.md  maths.md  planning-mcts.md  planning-si.md  utils.md
docs-mkdocs/development/: release-notes.md  viewing-docs.md
docs-mkdocs/getting-started/: installation.md  quickstart-jax.md
docs-mkdocs/guides/: generative-model-structure.md  pymdp-env.md  rollout-active-inference-loop.md
docs-mkdocs/javascripts/: mathjax.js  sidebar-accessibility.js
docs-mkdocs/legacy/: index.md
docs-mkdocs/migration/: numpy-to-jax.md
docs-mkdocs/notebooks/: active_inference_from_scratch.html  cue_chaining_demo.html  tmaze_demo.html  using_the_agent_class.html
docs-mkdocs/styles/: crisp-api.css
docs-mkdocs/tutorials/: index.md  notebooks.manifest
docs/algos/: fpi.rst  index.rst  mmp.rst
docs/notebooks/: active_inference_from_scratch.ipynb  cue_chaining_demo.ipynb  free_energy_calculation.ipynb  global.db  pymdp-fundamentals.ipynb  pymdp_fundamentals.ipynb  tmaze_demo.ipynb  using_the_agent_class.ipynb
examples/: A_matrix_demo.ipynb  A_matrix_demo.py  B_matrix_demo.ipynb  B_matrix_demo.py  agent_demo.ipynb  agent_demo.py  building_up_agent_loop.ipynb  demo_1.py  distribution_api.ipynb  generalized_tmaze_demo.ipynb  graph_navigation_demo.ipynb  graph_worlds_demo.ipynb  gridworld_tutorial_1.ipynb  gridworld_tutorial_2.ipynb  inductive_inference_example.ipynb  inductive_inference_gridworld.ipynb  inference.ipynb  inference_and_learning.py  knapsack_demo.ipynb  learning.ipynb  model_inversion.ipynb  multi_factor_demo.ipynb  opti_model_v3_rjp.py  single_factor_demo.ipynb  sophisticated_demo.ipynb  sophisticated_tmaze.ipynb  test_ovf.ipynb  testing_large_latent_spaces.ipynb  tmaze_demo.ipynb  tmaze_learning_demo.ipynb
examples/01/: 01.ipynb
examples/advanced/: complex_action_dependency.ipynb  pymdp_with_neural_encoder.ipynb  testing_large_latent_spaces.ipynb
examples/api/: distribution_api.ipynb  model_construction_tutorial.ipynb
examples/beginner/: thermostat_intro.ipynb
examples/envs/: CartPole_pymdp_JAX_alpha.ipynb  bipedal_walker_to_jax_specs.md  chained_cue_navigation.py  cue_chaining_demo.ipynb  generalized_tmaze_demo.ipynb  graph_worlds_demo.ipynb  gymnax_CartPole_pymdp_JAX_alpha.ipynb  knapsack_demo.ipynb  playground.ipynb  simplest_demo.ipynb  simplest_demo.py  tmaze_demo.ipynb
examples/inductive_inference/: inductive_inference_example.ipynb  inductive_inference_gridworld.ipynb
examples/infer_states_optimization/: methods_test.ipynb
examples/inference/: 01.ipynb
examples/inference_and_learning/: inference_learning_hsmm.ipynb  inference_methods_comparison.ipynb  learning_gridworld.ipynb  sparse_benchmark.ipynb
examples/learning/: grid_world.py  learning_gridworld.ipynb  learning_simplest.py
examples/legacy/: agent_demo.ipynb  free_energy_calculation.ipynb  gridworld_tutorial_1.ipynb  gridworld_tutorial_2.ipynb  pymdp_fundamentals.ipynb  tmaze_demo.ipynb  tmaze_learning_demo.ipynb
examples/mcts/: graph_worlds_demo.ipynb  grid_world_demo.ipynb  tmp_mcts.py
examples/model_fitting/: fitting_with_pybefit.ipynb  model_inversion.ipynb  tmaze_recoverability.py
examples/renormalised_generative_models/: discretise.py  hierarchy.py  mnist_rgm.ipynb  preprocess.py  utils.py
examples/si/: si_graph_world.ipynb  (+2 more)
examples/simglucose/: insulin_pump-sample-02-jax-pymdp.ipynb  pyproject.toml
experimental/: mmp.py
inferactively/: __init__.py  categorical.py  dirichlet.py  functions.py
inferactively_pymdp.egg-info/: SOURCES.txt  requires.txt  top_level.txt
paper/: paper.bib  paper.md
pymdp/: __init__.py  agent.py  agent_si.py  algos.py  control.py  default_models.py  distribution.py  inference.py  learning.py  likelihoods.py  maths.py  utils.py
scratch/: test_4.py  x.py
scripts/: README.md  docs_build.sh  docs_serve.sh  docs_sync_and_serve.sh  notebook_precommit.py  run_notebook_manifest.py  sync_docs_notebooks.sh
test/: conftest.py  scan_over_class_inplace_updates.py  test_SPM_validation.py  test_agent.py  test_agent_jax.py  test_agent_noCategorical.py  test_categorical.py  test_categorical_observations.py  test_control.py  test_control_jax.py  test_control_noCategorical.py  test_cue_chaining_env.py  test_demos.py  test_dirichlet.py  test_distribution.py  test_env.py  test_fpi.py  test_grid_world_parity.py  test_hmm_associative_scan.py  test_inductive_inference_jax.py  test_infer_states_optimized.py  test_inference.py  test_inference_jax.py  test_jax_sparse_backend.py  test_learning.py  test_learning_jax.py  test_learning_noCategorical.py  test_likelihoods.py  test_message_passing_jax.py  test_mmp.py  test_param_info_gain_jax.py  test_pybefit_model_fitting.py  test_rollout_function.py  test_sophisticated_inference_jax.py  test_tmaze_envs.py  test_tmaze_recoverability.py  test_utils.py  test_utils_jax.py  test_vfe_jax.py  test_wrappers.py
tests/: test_categorical.py  test_control.py  test_dirichlet.py  test_framework.py  test_learning.py  test_mmp.py  tests.py
tmp/: SPMtools.py  debugging.py  mmp.py
(+242 files in other folders)
