[metadata]
name = pymdp
version = 1.0.0
description = A Python package for solving Markov Decision Processes with Active Inference
author = Conor Heins, Alexander Tschantz, Tim Verbelen, Dimitrije Markovic
license = MIT

[options]
packages = find:
python_requires = >=3.10

[options.package_data]
pymdp = envs/assets/*
