[metadata]
name = inferactively-pymdp
version = 1.0.0
description = A Python package for solving Markov Decision Processes with Active Inference
long_description = file: README.md
long_description_content_type = text/markdown
author = Conor Heins, Alexander Tschantz, Tim Verbelen, Dimitrije Markovic
author_email = conor.heins@gmail.com, tschantz.alec@gmail.com, verbelen.tim@gmail.com, dimitrije.markovic@tu-dresden.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
python_requires = >=3.10
project_urls =
    Documentation = https://pymdp-rtd.readthedocs.io/en/stable/
    Repository = https://github.com/infer-actively/pymdp

[options]
packages = find:
install_requires =
    numpy>=1.19.5
    jax>=0.3.4
    jaxlib>=0.3.4
    equinox>=0.9
    multimethod>=1.11
    matplotlib>=3.1.3
    seaborn>=0.11.1
    mctx>=0.0.5
    networkx>=3.3
    pytest>=6.2.1
include_package_data = True

[options.extras_require]
gpu =
    jax[cuda12]>=0.3.4
    jaxlib[cuda12]>=0.3.4

[options.package_data]
pymdp = envs/assets/*

[options.packages.find]
where = .

[tool:pytest]
minversion = 6.2.1
markers =
    notebook: notebook tests
    fast: fast-running tests suitable for every PR
    slow: slow-running tests (run on schedule)
    legacy: tests using legacy NumPy backend
    experimental: experimental/potentially unstable tests
# Ignore warnings from notebooks
filterwarnings =
    ignore::DeprecationWarning
    ignore::FutureWarning
# nbval configuration
nbval_ignore_warnings = DeprecationWarning,FutureWarning
nbval_sanitize_patterns =
    *.py:[0-9]+
    /tmp/.*
    /var/.*

[flake8]
max-line-length = 120
